# pianosynth

./: .gitignore  README.md  RESUMPTION_GUIDE.md  chatgpt_dump.html  chatgpt_dump_v2.html  implementation_plan.md  iowa_piano.html  project_setup_prompt.md  pyproject.toml  task.md  walkthrough.md
attic/: DATA_SETUP.md  README.md
attic/scripts/: analyze_all_params.py  analyze_amplitude.py  analyze_decay.py  analyze_neighbor_substitution.py  analyze_samples.py  apply_neighbor_fix.py  check_neighbor_average.py  check_param_movement.py  check_pitch.py  check_similarity.py  compare.py  download_data.py  evaluate_loss.py  find_cpts.py  generate_diagnostic_audio.py  generate_full_comparison.py  generate_scale_comparison.py  generate_wavernn.py  inspect_checkpoint.py  inspect_map.py  inspect_params_23.py  patch_low_notes.py  patch_missing_notes.py  plot_categorical_params.py  plot_loss.py  preprocess.py  (+20 more)
scripts/: aggressive_neighbor_fix.py  analyze_b_val.py  analyze_loss_per_note.py  analyze_low_note.py  apply_neighbor_subst.py  check_missing_data.py  check_unison.py  debug_low_pitch.py  evaluate_loss.py  extract_report_data.py  find_outliers.py  generate_categorical_comparison.py  generate_scale.py  inspect_checkpoint.py  plot_parameters.py  render_c4_comparison.py  train_all_notes.py  train_c4_mf.py  train_full_keyboard.py  train_outliers_random.py  train_patched_polish.py  train_smart_smoothing.py  train_spectral.py  verify_clean_dataset.py  verify_fix_success.py
tests/: test_data_download.py  test_pitch.py  test_pitch_440.py  test_pitch_debug.py  test_process.py
(+13 files in other folders)
