[project]
name = "pianosynth"
version = "0.1.0"
description = "Piano note synthesizer"
authors = [
    {name = "Arthur Breitman",email = "arthurb@nospam.spam"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
