[project]
name = "pianosynth"
version = "0.1.0"
description = "Piano note synthesizer"
authors = [
    {name = "Arthur Breitman", email = "arthurb@nospam.spam"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch>=2.9.1,<3.0.0",
    "scipy>=1.17.0,<2.0.0",
    "soundfile>=0.13.1,<0.14.0",
    "requests>=2.32.5,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "pandas>=2.3.3,<3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pianosynth"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
